Fixed layout issue

--- a/assets/reset.css
+++ b/assets/reset.css
@@ -175,6 +175,7 @@ body {
 }
 
 .pred-full-vacc-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
